--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Vincent Enierga <venierga@email.unc.edu>"]
 edition = "2018"
 
 [dependencies]
+structopt = {version = "2.0", default-features = false }
